--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -23,6 +23,7 @@
   <h:outputStylesheet name="css/jk.css" />
   <h:outputScript name="js/TableList.js" />
   <h:outputScript name="js/FakeTable.js" />
+  <h:outputScript name="js/MinTable.js" />
   <h:outputScript name="js/TreeView.js" />
   <h:outputScript name="js/InfoPanel.js" />
   <h:outputScript name="js/TableAction.js" />
