feature add column

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -214,7 +214,7 @@
           <!-- command button -->
           <div class="hcia-tblaction">
             <button class="btn btn-danger hcia-btnright" onclick="InfoPanel.displayCurrentTable()">Cancel</button>
-            <button class="btn btn-info hcia-btnright" onclick="TableAction.save()">Save</button>
+            <button id="btn-save" class="btn btn-info hcia-btnright" onclick="TableAction.save()">Save</button>
           </div>
 
         </div><!-- tab content -->
