--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -89,7 +89,7 @@
                     <th>PK</th>
                     <th>FK</th>
                     <th>AI</th>
-                    <th></th>
+                    <th>Action</th>
                   </tr>
                 </thead>
                 <tbody class="table-info">
@@ -158,6 +158,7 @@
                     <th>Column</th>
                     <th>Refer Table</th>
                     <th>Refer Column</th>
+                    <th>Action</th>
                   </tr>
                 </thead>
                 <tbody class="relationship-info">
