--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -22,6 +22,7 @@
   <!-- custom style sheets and scripts -->
   <h:outputStylesheet name="css/jk.css" />
   <h:outputScript name="js/TableList.js" />
+  <h:outputScript name="js/Relationship.js" />
   <h:outputScript name="js/FakeTable.js" />
   <h:outputScript name="js/MinTable.js" />
   <h:outputScript name="js/TreeView.js" />
